--- a/Interfaz_CARINOR-2.0/FPedidos.resx
+++ b/Interfaz_CARINOR-2.0/FPedidos.resx
@@ -120,8 +120,151 @@
   <metadata name="bunifuElipse1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>36</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="Boton_PedidosE.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="bunifuGradientPanel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAA8sAAAJMCAYAAADNMzR7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAB9cSURBVHhe7dj/nyRVfe/x+n/uI9fc5BqvSQwSQwhBg8QY
+        JIiACLgCIiIiIjL/+dyz3bvu7Jn3DP2lquvUOc8fnkkVO9PTXV11zufl9L+eee27f/Wd164AAACAvWl3
+        8E+vXQMAAAB7YhkAAAAqYhkAAAAqu1j+3+UAAAAARlNH8uP/Pv3VMyWWnyknAAAAMIobYZz+XSwDAABA
+        RSwDAABA5VEs/7ScAADclIcHABiBWAYAAKBjNyM4/XsmlgEAAKAyfaPE8jfKAQAAAGxdCt8k/e5NYhkA
+        AAAqYhkAAAAq+1j+bjkBAACALXkYtum/z0AsAwAAQEUsAwAAQEUsAwAAQGUXy39dDgCgdWkjAwA4R5o5
+        HhLLAAAAUBHLAAAAUBHLAAAAUFk+lp8FupWeeQAA6MD0jWdLLKchGAAAAC4hxOrB0uvNoMTy6yWWXy8n
+        p8ovDAAAANvypHWn/1NiubgGAGDv5rAEwBJSqN6Ufmdeaf2/SSwDAABwMSlcH0s/vxaxDAAAABWxDAAA
+        ABWxDAAAABWxDAAAAJV5Y/mfAQBOkOYKAFjRLpb/pmxSS4qbIgAAAP0Iwfm10uuspO7Yi8QyAAAAfUrh
+        +VD62S0RywAAAFARywAAAFARywAAAFARywAAAFARywAAAFCZ/rbE8t+WgzWlNwYAAABreNipj2L5Z+Xk
+        a3zv0sobBAAAtu1ReLAddTT2p/TmAaZyA1/lWAUAYH5lUANoVYzLIv3sWdL62BaxDAAAABWxDAAAABWx
+        DAAAABWxDAAAABWxDAAAAJVdLP/fcgAAAECfUgwuKb2HrRHLAAAAUNnH8r+UE2BZ4QEEAADaJJYBAACg
+        IpYBAACgIpYBAACgIpYBAACgMn2zxPI3ywEAAADbkOLuEtJ76ZVYBgAAgEqJ5TdKLL9RTtaQ3xQAAADM
+        I7Xo11s5lgEAWEcaKAHuk9aSfk3ffK7E8nPlBAA4XthcAWA+KVofSz/PwdK+foNYBgAAgIpYBgAAgMou
+        lv+uHAAAe/VmCQCcJ+23rRPLAAAAUBHLAAAAUBHLAAAAUBHLAAAAUBHLAAAAUNnH8r+WEwAA2KIw5AKD
+        SWvDmaZvlVj+VjkAABhZGpQAOE5aX7dKLAMAAMwsheQh0muxDrEMAAAAFbEMAAAAlUex/GY5WUt+YwAA
+        AHCc1JynaSCWOV26OQAAAOaSOmQMYhkAAOAoKSofSz/PFu1i+f+VA9qUvjQAAIAepAZqxfSt50ssP19O
+        AAAAiFLo1VJwcYdwjVsjlgEAAKAilgEAAKAilgEAAKAilgEAAKAilgEAAKAyfbvE8rfLAaQbBAAAYAmp
+        SVoilgEAgOFsJdhYj1gGAACAyj6W/62cAAAA9CwEETekazYwsQwAAAAVsQwAAACVEstvlVh+q5xsTf5A
+        AAAA9Ch14XJ2sfz35YAn0oVaR7pBAAAAlpTaZD2p2S5BLAMA0Jk3GVQOv0vKsfdYvl9plVgGAACAilgG
+        AACAilgGAACAyvTtF0osv1BOAAAAWheiZjPS56FZYhkAAAAq0z+UWC6uuV+6eAAAACwvNdrSxDIAANCk
+        FE0tSO+V/ohlAAAAqIhlAAAAqIhlAAAAqIhlAAAAqIhlAAAAqOxi+R///a1rTvcPAADA4W5GSfp3uEdq
+        siU8iuWfl5Otyh8MAFqSNnsAqKU9ZFyp/y6ng1jmeOlGBAAA+pAagGOJZQAAiFKEsG3pe4ZMLAMAAAsR
+        q2yXWAYAAICKWAYAAIDK9J0Sy98pB61IbxIAAACOkXrzGM3FMhfwItC89OwCs0qDFcBS0jpE26bvvFhi
+        OQ1qAAAA90hReKwUKV0K14+2iWUAAACoiGUAAACoiGUAAACoiGUAAACo7GL5n8rB0tIfBwAAgEtKvZpc
+        LJZhSekhAACAXqWZmHmJZQAAYCdFWZJ+F3pTYvntEstvl5PR5Asym+8DAH+R9koABpX6rD37WP5+OaFT
+        5WYEAIC7xJjZqPT5hpFagHOIZbhTWoQAANi2NPfBbWIZAACGIhzhENMzJZafKQc3pR8EAACA3j3u4hjL
+        wP3SQwUAAEtI8yjLE8sAANApoQWnE8sAAABQEcsAAABQ6TeWfwAAAEGaHQEqU1kwrm4tIAAAwHaEQf8o
+        6TVhcGIZAAAAKrtY/m45gGPVNxMAANCmNM9zP7EMAAAbUkfQVqTPAi0TywAAAFARywAAAFB5FMu/KCcj
+        yhcFAACAuaQWa9/gsczx0s0PAACcJ83erEkst+I/uJyyGMGx4qYGAGxLmQXhQNOzJZafLQEBl5IDFgCg
+        RyXQNiG9d3qQ5nEOI5YBAGBFKXBalN479EwsAwAAQEUsAwAAQEUsAwAAQEUsAwAAQEUsAwAAQGUXy/9c
+        DmBr0g0NAADk+ZnjTM++VGL5pXICADQhDT0AI0oBA5cilgEAAKAilgEAAKAilgEAAKBSYvmdEsvvxH8E
+        AACA8bxzM5Y5XLqYAAAAI0mt1I/peyWWi2v6kr7s06SHAgAAmEeawduQOmMkYhkW8wsAVpCHUaAF6Zm9
+        X5qx4DLEMnCktJEBQL9S9J0ivXZb0r4P49rH8g/LCQAA2xKGO4BupXVwQWIZAAAAKmIZAAAAKmIZAAAA
+        KrtY/pdywBjSTQAAAJCkphiFWIaBpAUQAKA3aQ6CY4llAACGkuIqSb8LjEMsAwAAQEUsAwAAQGX63ssl
+        ll8uJwAA0JswAAN3SM/QwMQyAAAAVKbnSiw/9/K71/d7hwOliwwAADCS1ErtSg387qGxTJYuNHCXtJAC
+        ABwjzRhcSmqifollLiw9dAAAsGVp7mXrxDKcLC2UAADMI81fcDliGRhM2owBYAvSvgYsRSwDAABARSwD
+        AABAZRfL//qf715zvucAAJhfGGJhFen+5CCpn1onlmFBaaEAAKBNaZ5jXGIZAIDmpJDZmvS5gO0QywAA
+        AFARywAAAFARywAAAFARywAAAFCZni+x/Hw56E36sAAAALQvNd6ldRvL0JO0gAAAcLo0c8FN0/M/eu+q
+        uD5feUEAAAhSrLQqDc3dCN8NjCE17P1mjOWRpS8DAABgy1L7jEMss7D00AEAQA/S/EsvxDI0Ky3IAAAt
+        SzMNbJNYBmaUNk0AYD5p/wWWsIvlfysHW1V/IAAA1pDCbknpPQA9Sz24pM3HMnCeehECAOhJmn/gEGIZ
+        ADaoHgaB/qRnH7gcsQz057+OlF4DAICh7WM5DY8AAAAwKLEMAAAAFbEMAAAAlemFEssvlIPWpDcLAAAA
+        tdSU52o2luHS0kMHAAB3STMl/RDLAEAT0iAKPUj3O9A+sQwAQIy8U6TXBtiiR7H8y3KylPyHAQAAYH6p
+        S493gVgmS18qBD8GbknPCgBwoNQn1KYydFy98ONyArMrDyIA0J44PMMB0v00pDT70ptdLP97OThHemHg
+        EGnxBQDYqjTvQFtS0yazxDKMKj18XFLapAGgBWnfogdpJqRPYhnghrQp8lgaBgHWltYrHkt7HXAYsQwA
+        0KEUTrX0ewDsiWUAAACoiGUAAACoiGUAAACoTC+WWH6xHDyUfgCa8N8AXFxajwFgAA/7eB/LZUOEtcQB
+        DQC4XzXYsbD0HcAM0nxMG8QyQKPShgoAac8A5ieWAQAAoCKWAQAAoCKWAQAAoFJi+UGJ5QflZE35zQEA
+        AMDTUlPOr5FYHln68gEAAOaSOoSvs4vl75cDaM3+Jk0POwAAzOHpOFpDmoNpg1iGi/olQd68AIC1pX37
+        bmn2ge2aXnylxPIr5QSgKWXTBehcipNZPHztC0ufj7S/AVshlgFoXBpAgW1IzzTANohlAICLSlE5p/Q3
+        ATiWWAYAAICKWAYAAIDK9IMSy8U1Y0s3BwAA0L4033M+sQx0J20iAMBtaR8F9sQyAMBMUoy0LH0GAPbE
+        MsztJ8Cs0nMGALCwfSyn4QQAAAAGJZYBAACgIpYBAACgsovl//jJr67b9IALSjcIAACwDWnG377UiZfR
+        eCxzt3QjAZeQNicAaFHax+hFagTmJJZpWFoUAHgoDcXQg3S/w/zS7AlPE8uweWkDAAA4RpoxYGxiGRhY
+        GhYAGFPaJ4CRieWlvAowtzLMMa443MOWlHUMYEOmH7xaYjkOZQAAoygxt5j09wBo3fRSieWXygGkGwQA
+        ANiWNOtzPLEMnCwtzgDAmNKsAFsmlgGAg6UBGWrp3gHYGrEMAAwjhd0p0msD0BexDAAAABWxDAAAABWx
+        DAAAAJVdLP/wf351zbpeAoDehUEEgDb9ELEMrCcO0wBA09KeDj0qsfx+ieX3y8lW5A8CwOWk4QmgNWn9
+        AlqW+m89G4xlnpZuMgAYQwqkm9LvAGxTagGWJJbpXFpoAADYvjT7wXzEMmxO2iwAAE6V5g1ALAMdSwMB
+        ANwl7SXAqKaXSyy/XA64rPRlALQlDZJAv9I6APBE6pqeiWXYmLRwAS1I8QFJun+Am9IMBJc2vfxaieXX
+        ygkANO6HjKMMKXBTGmSBCyhr8qjEMgAAAFTEMgAAAFTEMgAAAFTEMgAAAFR2sfyf5YC9+gIBAABwutRd
+        WyCWoVP1IgUA0LI0z8CaxDIA3KMe5oDzpWcNoDViGQBYVB1KW5c+IwD92cfyTz+47kv5cADAusLgATCr
+        tPbQsNRu7eo0lkeUbkYAAGC70tzPpYhlOpYWHAAAti3NfTC/6Uclln9UDkaRLgKMLW1CAMA2pL0dtiH1
+        WkuGi2U4R3rIaUEaHgDgFGmfYcvSTAeHEMsAw3n/L/KgCJCjozd5jQTYE8sAsIon/6PF1uS4alN6/3dL
+        3xMAoxLLAMARUmSeKr0+ALRBLAMAAEBl+tHrJZZfLycAALUwPMBq0j0KsJBdLP9XOWhVetMAAACMJzXj
+        UpqPZdiC9CADALCeNLPBMcQyAItJwwvAktJaBHAKsQwAjUtBQD/Sdw7A+sQyAAAAVMQyAAAAVEosf1hi
+        +cNy0rt8AQAAAJhbarJtmX5cYrm4vqT0RlhDuqkBOvSzBaW/BwB3SnM5c0jteY59LP+snADBB2eJgzUA
+        AEUJnAXl2Q4OJ5ZhSDnuWUYeEADoUdoHlpP2eGAuYhngXmk4gXWlAZ11pO+HS0trN8D5xDJAl9JAyShS
+        1B0rvS6jSWsLwDjEMgDEUIB0rwAwCrEMAJuXQu8U6bUBYEy7WP7vcnCM9EIAAACwBalzayfFMrQk3fwA
+        ADC3NIvSL7EMsJQ35vdj+lXuGaB9cb0HujSVDfoqDWQAwOluxfAcysYNXycNfJypPH/AeMQyADTuVjQ/
+        kn4WAJiHWAYAAICKWAYAAIDK9IpYBgAAgKfsYvmVN359PYYPh5duAgAA6E2ahTlVaqv+DRbLPUo3M1uR
+        FnYAYD1pv4b7pRmdHohlNiQtTrBtaVCDm9wnT9TPD9CKNLfB9oll2IS0MQHde7OSfgZYQdqrgd7sY/nN
+        cgIwqzJMjC4OWHBDum9gCGnfAGiLWAZYRBoOgfGk9QGALRDLACwsBQTna+H63vyeAaAvu1j+STmgTelL
+        A+BcKfzWlN4jAC1Lszt9EcvQmLQYAwDnS/suwF3EMsBGpUGQfqV74C7p9y8hvRcA2CqxDMBQUuQtKb0H
+        AKB9YhkAAAAqYhkAAAAq0ytvlVh+q5wAQK/CBjiL9LcAgC5Mr5ZYfrUc0I70RQEAAO1J8zx9KLH8UYnl
+        j8pJLf8CjCYtigAA50gzB7CW1MMf3RfLI0gXChhdGmqgJ+7349y8XgD9S900psFjeSTpQQAAAJ6WZmlG
+        JJbZmLSgAQCwjjSvQR/EMjQtbUoAwPrSvg30RCwDjUsDCgCXkdZlgDHsYvl/ygHnqy8uMII0XMJG/PwA
+        6fc4U1pLAG5LzcHl7GP55+UE+FqvAncoAcBK0vexhPS375NeA8aSZglgO8QywAzSkARrSffoXNLfa0F6
+        rwBwDrEMwGpS9GxB+iwAQF/EMgAAAFTEMgAAAFTEMgAAAFSm10osv1YOOF66oAAAAHNLPcKyxDKcKS1m
+        AECf0iwA9EksA5uRhhbgCG9fzmsP/396DxwkrYEAXNZUNrOr197+TdnUjlF+GQAAADYhde39TozlXqWL
+        CgAA0KvURTwkloeTHhAAABhZmpsZnVhmAGlBBAAgz07AQ7tY/mk5GFG6INCGtJkBAO1J+zi0L/URTxs6
+        lulPWgjYkjSEANCOtHbTgjQXAecRy0C30jCxDWlAhcv56azy85mk93JZ9bN4mPRZANg+sQzAToqAJ1JY
+        9CtH3znyNQcA2iWWAWCLftG59JkB4IL2sZw2KQAAABiUWAYAAIDK9HqJ5dfLQc/SBwcAAOCJ1FIjGyKW
+        GVdaBAAAtiTNOMDyxDJwtrSxA7A9aY0HGJVYBmBWaQCvpd8DAGiJWAYAAIBKieWPSyx/XE7Olf8AAAAA
+        XEZq1dPMGMujSF8IAATvAMBaSrtwv9h7T0zlh65+Vn6wF7cuAGdKDx4AALQozbOcK3XXCLqLZdpXP3zL
+        SosoAAB7aX66X5rvoEdiGbr1m+bkTRroXVoPLi29rx6kz8p90n4JkIlloHNpWALoTVr/ADiHWAZYRRp2
+        YW3pXu1R+uxfJ70OAD0TywAAAFARywAAAFCZ3iixXFy3JL1RAAAAtiu1X8v2sfxuOWE+4UJzW3qAAGZV
+        1mQAjhdnXBiMWIaOpc0PAFqR9i6AVohlgI6l4XQJ6W8DAGyZWAYAAICKWAYAAICKWAYAAIDKLpbffPe3
+        18v6+Jb0ZgAAABhT6sbbUm8u40Kx3Kv05fUh3bwAAHApaUblPqlXOIdY5gDpYaQnaYMC2Iq0rl1Sek+9
+        S9cB1pVmWDjP9MZ7JZbfKydAUBbfY8UFHDqVngEAFpZmFmBuYhm6kTZTAOBuaT8F2BPLQCfSEARwrrTe
+        HCK91hrSewPgEGIZAAAAKtNbJZbfKgfnSi8OAAAAl5A69RyzxTL9STcgAADMLc2isDaxDBwlbXBAH9Iz
+        z/zStZ9b+rsAHEcsA1xAGma3JH0mAICeiWUAgCX88gDp9wBowj6W0+INAAAAgxLLAAAAUNnF8s/LwX3S
+        LwIAAMDWpOZNDopl2pZuAAAA4H5ptobHSix/UmL5k3JyafkNAU+kRR2A9aU1ewnpb48sXSOgV6khL2vF
+        WB5J+vIBAADukrqCSxLLHCA9vAAA0Io0w8J5xDLckhZgAIDWpDkGmItYBoK0IQNs3IPOpM/YlbQ/AVzO
+        9NaDEssPygm0LNy8jCgNUwwvRQQNK88yM0rX+FDp9QB4bHq7xHJxzTalLxUAAMjSTA2JWIYOpI0AYE1p
+        rWJ56bu4tPS+ALZILANDSgMeT0vXDQBgFGIZAAAAKmIZAAAAKmIZAAAAKmIZAAAAKrtY/kU5YLvqLxUA
+        Vvcrmpa+M+hQmp3hUPtYLosmcLg4eCylPKgwm3SPAZuU9qdjpNfktnTtgDGIZQAAAKg8iuXflZMW5TcN
+        AADAVqX2a0/jsdybdKMAAAA8lBqCtYhlFpQWAAAAeCzNkNAGsQw7afEGANiKNN8A55jeKbH8TjlgWeni
+        w/rSZgtA39J+cJ/0GmtK7xHak5qAbRHLsJC0aAIwn7T2spz0HbQovXeAU4hloAlp4GF96bsCABjB9M77
+        JZbfLycAvQiL3S3p9wAA4BGxDAAAABWxDAAAABWxDAAAAJVdLL9bDlhOuvAAAEB/Ug+wTWKZ7qRFCwC4
+        DHvx+erZBliHWAYAAICKWAYAAICKWAYAaNEHnUmfEaBhJZY/vXr3g0/LIrYF5U0DAACwEanrtmFjsTya
+        dLMBAADtSnM9WzS9V2L5vXLAE+lCcYy0aAAAwF3STMkhUs8wD7HMcNIiM4+08APQi/dYTLreW5Q+29Py
+        bAK0SSwDC0gDAm1I3xcAADWxDAAAABWxDAAAABWxDAAAABWxDAD050O6kr5jgIVNZQG6+mVZhEZ3a1EG
+        AABoXGob5iGWubj6AQcAYD1pXgPEMrCAehOeS/pbAACwBLEMAAAAFbEMAAAAFbEMAAAAFbEMAAAAlelB
+        ieUHH/7+ens+/Yv0wQAAADjfzfb6eqndtmnDsTyCdPP1Kz2YAMzo12zZA04Sn4XOpLmKtaSZnq3ax/Kv
+        ywk0oyw0AAA0KM1u0CexDEdLGwcA0J4t7OH1ewRaIZYBAACgIpYBAACgIpYBAACgsovlX5WDLUkfBAAA
+        gGWlPuvVJmOZcaUHFoDLSusz9CLd86dKrw9sh1iGzqXNe8vSZwQAgLmJZQD69hEArCTtS2zG9OCjEsvp
+        iwUAAIBBiWUAAACoiGUAAACoTO+XWH6/HKwhvSEAAADGkDqxFavGMtuSbm4AYGxpZhhFuh4jSdcEelJi
+        +bMSy5+Vkx7lDw0AAMAhUmeNofNY3rp0swIAAG1KMz1bJZZpQFpoAABoW5rroB9iGZqQNiAIflPuFwAA
+        llVm9H0sp38EAACAQe1i+YNysKT0hwEAACBJXXlpF4ll+pducACYQ9p3YIvS/b209D6Aw4hluLC0kXGe
+        dJ0BAOAcYhkAAAAqYhkAAAAqYhkAAAAqYhkAAAAq04cff3ZVXJ/rA84TvhzYvHSvAwDAmVKTzm22WGZ9
+        6SYCACDPTi1Ln4F8rWApYhkAAAAqj2L5D+XkpvzDAAAA0J+6if9wVyz3Jl0MAAAAbktNNZ5BYnkk6WYH
+        AABuS/M07IllOpQWQoCepLUPGI81AZa0i+Vfl4Mk/QJwrJsDbpJ+BwAAWFJq4JvujWW2L90UAMBx0h4L
+        B/ntZaT7tgXxmsBG7GM5PHCbFz4sJGlhpz/pu4eDpX0GAOhav7EMAAAAJxLLAAAAUBHLAAAAUBHLAAAA
+        UBHLAAAAUJk+KrH8UTngctIXAQAAtTRLniv9HbJ0/RiHWAYAAICKWAYA4Hif0I30/QIllj8psZweGs4T
+        LjbA7NL6AwDA2Uosf15i+fNycoj8IgAAANC21Lh3OzKWR5EuLAAAQOtS33AKsdyF9JAAAACHS3M2I9vF
+        8m/KAeuovxAOlRY42Lp0rwNkaa6AJaT7byvS54FDiWUAAACoiGUAAACoiGUAAACoiGUAYCy/A2aTnjHo
+        xD6W041Pv8KNACdJ9xcAAHRALAMAAEBl+rjE8sflgLakLwuAcaW9AqBF1i16IZbpxs2h0gINAACcQywD
+        AABARSwDAABARSwDAABARSwDAABA5VEs/7GcnCK/KAAAwC2fPpL+DWaV+vU4U7lZr3776R+vuenzp/zl
+        oQYA4GD1TAW1dN/0In3e5aW24VRimUfSwwZA39J+ALAG6xPtEcs0pl4ol5beAwAAMDqxDAAAABWxDAAA
+        ABWxDAAAABWxDAAAAJXpkxLLn5QDDpMuIgD0Lu2JAJeW1qdDpdeD+4hlFpEWqBal9w4A8MnvaVb6vmAB
+        +1hONyEAAAAMSiwDAABARSwDAABARSwDAABARSwDAABAZRfLvysHvUgfEgAAjpVmTbYjfacjSNeC05RY
+        /qLE8hflZAn5jwIAAMBxUnMuZ+FY3pr0hQAAAGxJah2OJZaHkR4iYD3pOQWofAbMKj1ncIfpk89KLKcb
+        CQAAAAYllgEAAKAilgEAAKAyfVpiubjuSfqgAEAf0t4PcK603iwpvQfa0mUsk6WHlNOk6wsAAPRDLAMA
+        AEBFLAMAAEBFLAMAAEBFLAMAe38A4E5p3aRr+1hONwMAAAAMahfLvy8Ha0pvDAAAOE+avTlfutajSten
+        F03EMgAAALRELAMAAEDlUSz/qZwsKf9xAAAAyFJbXs6FYrln6UsFAPbS3gnQs7QWPpR+lpaJZQAAAKiI
+        ZQAAAKhMn5VY/qwcrCG9IQA25nPgps8AKmmtaFF67ztlvx/R9NnnJZbTBQEAAIBBiWUAAACoiGUAAACo
+        iGUAAACoiGUAAACoiGUAAACo7GL5D+XgHOmFAQAAlpb6ZMvSZyRfq6XNEssAAADQE7EMLOePAABwAWkW
+        PdM+ltMfAwAAgEGJZQAAAKiUWP6yxPKX5aQF+U0CAAA3pVmacaR7Yk3pPW5fY7HconQzAMwlrTsAAKxt
+        +rzE8ufl4FDpRQAA2L40+wFtS89yb9LnvoSjYxkAAAB6J5YBAACgIpYBAACgIpZZxhcAAADbNZX/c1X/
+        RwAAABiZWAYAAIDKLpb/WA5q9Q8CAHtp3wQA+nJnLAMAAMCoxDIAAABUxDIAAABUxDIAAABUxDIAAMA5
+        /tSR9PkGtY/ldJFq4ZcBYBVpnwIAmNGjWP5zOVlTfnMAAOdJcwcj+QI4WV5Xa7efu15MX5RYThcGAAAA
+        RiWWAQAAoCKWAQAAoCKWAQAAoCKWAQAAoCKWAQAAoCKWAaBzfwLa8SX0K+1BWzZ98eWXV+mDnqS84JrS
+        BzxWel2gAWnNAQCAhcwbywAAANABsQwAAAAVsQwAAAAVsQwAAAAVsQwAAAAVsQwAABvyJXQg3dutmb4s
+        sZzePAAAwPq+omvpO29DieWvSiynNw0AwKz+DECU1syV7WM5vdm5hD/KgNK9AQAA0KjlYxkAAAA2RiwD
+        AABARSwDAABARSwDAM35MwDckPaKpe1iOb2ZJaQ3MIp0PQAAAGjTRWMZAAAAtkAsAwAAQEUsAwAAsK6v
+        TpReaybTl1+VWE5/FAAAAAYllgEAAKAilgEAgGZ9BUdK99EppvJiV/WLAwAAwMjEMgAAAFTEMgDA4q4A
+        WFVam+/3KJbTiwEAAMCYxDIAAABUxDIAAHB5V7CydF/esI/l9IsAABzkCoDNSuv6Q7tYrn8YAAAARiaW
+        AQAAoCKWAQAA4ClX1/8fRqacWNdw75kAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="bunifuThinButton21.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAHgAAAApCAYAAAD+tu2AAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGhSURBVHhe7du/SwJxHMbx/qKWhpaGhugHRENDBQ0FFTSk
@@ -147,13 +290,4 @@
         i4Nr1k1gGgLm8EZg8BEYfAQGH4Gh58gf81TGgoxp+zkAAAAASUVORK5CYII=
 </value>
   </data>
-  <metadata name="NobreCliente.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Cantidad_Pedido.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Cantidad_Pagar_P.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
 </root>
